--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,24 @@
   <div class="panel-footer">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-sm-6">
+			<div class="col-sm-4">
 				<p>Copyright RT2 Lab, 2019</p>
+				<img class="img-fluid" src="../images/logo/curie-psl.png"
+				     style="max-width: 150px;">
 			</div>
-			<div class="col-sm-6">
+
+			<div class="col-sm-4">
+				<p>Links</p>
+				<ul class="list-unstyled">
+					<li><a href="https://institut-curie.org/">Institut Curie</a></li>
+					<li><a href="https://github.com/rt2lab">Github</a></li>
+					<li><a href="">Twitter</a></li>
+				</ul>
+			</div>
+
+			<div class="col-sm-4">
+				<p>Contact</p>
+
 				Institut Curie<br>
 				26 rue d'Ulm<br>
 				75005 Paris<br>
