--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     {% include header.html %}
 
     <div class="container-fluid">
+      <h2>{{ page.title }}</h2>
       <div class="row">
         {{ content }}
       </div>
