--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -7,7 +7,7 @@ layout: default
 </div>
 
 <div id="newsid" class="col-sm-4" >
-	<h2>News</h2>
+	<h3>Tweets</h3>
 	<a class="twitter-timeline" data-tweet-limit="3"
 	data-chrome="noheader nofooter noborders"
 	href="https://twitter.com/FabienReyal?ref_src=twsrc%5Etfw"></a>
