--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,7 @@
 
 @import "bootstrap";
 
+
 img {
   margin-bottom: 24px;
   margin-top: 17px;
@@ -11,6 +12,7 @@ img {
 
 body {
   padding-top: 70px;
+  text-align: justify;
 }
 
 figcaption {
@@ -29,17 +31,10 @@ p.byline {
   margin-bottom: 48px;
 }
 
-pubtit {
-  font-weight: bold;
-}
-
-firstp {
-}
-
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
-  max-width: 1000px; /* or 950px */
+  max-width: 900px; /* or 950px */
 }
 
 /* Home, News */
