--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -8,8 +8,5 @@ layout: default
 
 <div id="newsid" class="col-sm-4" >
 	<h3>Tweets</h3>
-	<a class="twitter-timeline" data-tweet-limit="3"
-	data-chrome="noheader nofooter noborders"
-	href="https://twitter.com/FabienReyal?ref_src=twsrc%5Etfw"></a>
-	<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	{% include tweets.html %}
 </div>
