--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,6 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-4">
-				<p>Copyright RT2 Lab, 2019</p>
 				<img class="img-fluid" src="../images/logo/curie-psl.png"
 				     style="max-width: 150px;">
 			</div>
@@ -25,6 +24,10 @@
 				75005 Paris<br>
 				France
 			</div>
+		</div>
+
+		<div class="row mt-3">
+			<p class="text-center">Copyright RT2 Lab, 2019</p>
 		</div>
 	</div>
   </div>
