--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div id="homeid" class="col-sm-8">
+<div id="homeid" class="col-sm-8 ml-0 nopadding-left">
 	<div id="carousel" class="carousel slide" data-ride="carousel" data-interval="5000" data-pause="hover" >
 		<!-- Menu -->
 		<ol class="carousel-indicators">
@@ -36,6 +36,6 @@ layout: default
 	{{ content }}
 </div>
 
-<div id="newsid" class="col-sm-4" >
+<div id="newsid" class="col-sm-4 nopadding-right" >
 	{% include tweets.html %}
 </div>
