--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,14 @@
     {% include header.html %}
 
     <div class="container-fluid">
-      <h2>{{ page.title }}</h2>
-      <div class="row">
-        {{ content }}
+      <div class="col-sm-12">
+        <div class="row">
+          <h2>{{ page.title }}</h2>
+        </div>
+
+        <div class="row">
+          {{ content }}
+        </div>
       </div>
     </div>
 
