new people layout

--- a/css/main.scss
+++ b/css/main.scss
@@ -24,6 +24,11 @@ figcaption {
   margin-right: 0 !important;
 }
 
+.team-member-card {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
