member profile page

--- a/css/main.scss
+++ b/css/main.scss
@@ -34,7 +34,7 @@ figcaption {
   margin-left: auto;
   max-width: 900px; /* or 950px */
 }
-/* Carusel */
+/* Carousel */
 
 .carousel {
   border-radius: 3px 3px 3px 3px;
