--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -1,7 +1,38 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<h4>{{ page.role }}</h4>
 
-{{ content }}
+<div class="col-sm-12">
+    <div class="row text-center">
+        <!-- Avatar -->
+        <img src="{{ site.url }}{{ site.baseurl }}/images/team/{{ page.image }}"
+             class="img-circle"
+             style="filter: grayscale(100%); max-width: 200px;"/>
+
+        <!-- Name & Role -->
+        <h1>{{ page.title }}</h1>
+        <h3>{{ page.role }}</h3>
+
+        <!-- Social -->
+        <ul class="list-inline list-unstyled">
+            <li><a href="{{page.social.twitter}}"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="{{page.social.linkedin}}"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="{{page.social.google-scholar}}"><i class="fab fa-google"></i></a></li>
+        </ul>
+    </div>
+
+    <!-- Education -->
+    <div class="row">
+        <h3>Education</h3>
+        <ul class="list-unstyled">
+            {% for education in page.education %}
+                <li>{{education}}</li>
+            {% endfor %}
+        </ul>
+    </div>
+
+    <div class="row">
+        <h3>Bio</h3>
+        {{ content }}
+    </div>
+</div>
