--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,14 @@ figcaption {
   margin-bottom: 20px;
 }
 
+.breadcrumb {
+  background: none;
+  border: none;
+  display: block;
+  margin-left: 0;
+  padding-left: 0;
+}
+
 .nopadding-left {
   padding-left: 0 !important;
   margin-left: 0 !important;
