--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -3,6 +3,15 @@ layout: default
 ---
 
 <div class="col-sm-12">
+    <div class=row>
+        <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/team">Team</a></li>
+            <li class="breadcrumb-item text-capitalize"><a href="/team#{{ page.category }}">{{ page.category }}</a></li>
+            <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
+        </ol>
+        </nav>
+    </div>
     <div class="row text-center">
         <!-- Avatar -->
         <img src="{{ site.url }}{{ site.baseurl }}/images/team/{{ page.image }}"
