--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -26,19 +26,27 @@ layout: default
         <ul class="list-inline list-unstyled">
             <!-- Twitter -->
             {% if page.social.twitter %}
-                <li><a href="{{page.social.twitter}}"><i class="fab fa-twitter"></i></a></li>
+                <li><a target="blank" href="{{page.social.twitter}}"><i class="fab fa-twitter"></i></a></li>
             {% endif %}
             <!-- Linkedin -->
             {% if page.social.linkedin %}
-                <li><a href="{{page.social.linkedin}}"><i class="fab fa-linkedin"></i></a></li>
+                <li><a target="blank" href="{{page.social.linkedin}}"><i class="fab fa-linkedin"></i></a></li>
             {% endif %}
             <!-- Google Scholar -->
             {% if page.social.google-scholar %}
-                <li><a href="{{page.social.google-scholar}}"><i class="fab fa-google"></i></a></li>
+                <li><a target="blank" href="{{page.social.google-scholar}}"><i class="fab fa-google"></i></a></li>
             {% endif %}
             <!-- Github -->
             {% if page.social.github %}
-                <li><a href="{{page.social.github}}"><i class="fab fa-github"></i></a></li>
+                <li><a target="blank" href="{{page.social.github}}"><i class="fab fa-github"></i></a></li>
+            {% endif %}
+            <!-- Personal Website -->
+            {% if page.social.website %}
+                <li><a target="blank" href="{{page.social.website}}"><i class="fas fa-globe"></i></a></li>
+            {% endif %}
+            <!-- Orcid -->
+            {% if page.social.orcid %}
+                <li><a target="blank" href="{{page.social.orcid}}"><i class="fab fa-orcid"></i></a></li>
             {% endif %}
         </ul>
     </div>
