--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -32,10 +32,6 @@ layout: default
             {% if page.social.linkedin %}
                 <li><a target="blank" href="{{page.social.linkedin}}"><i class="fab fa-linkedin"></i></a></li>
             {% endif %}
-            <!-- Google Scholar -->
-            {% if page.social.google-scholar %}
-                <li><a target="blank" href="{{page.social.google-scholar}}"><i class="fab fa-google"></i></a></li>
-            {% endif %}
             <!-- Github -->
             {% if page.social.github %}
                 <li><a target="blank" href="{{page.social.github}}"><i class="fab fa-github"></i></a></li>
@@ -44,9 +40,17 @@ layout: default
             {% if page.social.website %}
                 <li><a target="blank" href="{{page.social.website}}"><i class="fas fa-globe"></i></a></li>
             {% endif %}
+            <!-- Google Scholar -->
+            {% if page.social.google-scholar %}
+                <li><a target="blank" href="{{page.social.google-scholar}}"><i class="fab fa-google"></i></a></li>
+            {% endif %}
             <!-- Orcid -->
             {% if page.social.orcid %}
                 <li><a target="blank" href="{{page.social.orcid}}"><i class="fab fa-orcid"></i></a></li>
+            {% endif %}
+            <!-- Research Gate -->
+            {% if page.social.research-gate %}
+                <li><a target="blank" href="{{page.social.research-gate}}"><i class="fab fa-researchgate"></i></a></li>
             {% endif %}
         </ul>
     </div>
