--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/news">News</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
+		<!-- <li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li> -->
 		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
 	  </ul>
 	</div>
