--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 	<nav class="navbar navbar-expand-sm navbar-light px-0">
 
 		<!-- Navbar brand -->
-		<a class="navbar-brand" href="/">{{ site.title }}</a>
+		<a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}">{{ site.title }}</a>
 
 		<!-- Navbar toggler button -->
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
