--- a/_includes/team_member.html
+++ b/_includes/team_member.html
@@ -1,7 +1,7 @@
 <li class="media mt-3">
     <img class="align-self-center mr-3"
          src="/assets/images/team/{{ member.image }}"
-         style="max-width: 100px; filter: grayscale(100%);"
+         style="max-width: 100px; filter: grayscale(100%); border-radius: 50%;"
          alt="{{member.title}}">
 
     <div class="media-body">
