--- a/_includes/team_member.html
+++ b/_includes/team_member.html
@@ -1,4 +1,4 @@
-<li class="media mt-3">
+<li class="media mb-5">
     <img class="align-self-center mr-3"
          src="/assets/images/team/{{ member.image }}"
          style="max-width: 100px; filter: grayscale(100%); border-radius: 50%;"
@@ -6,6 +6,7 @@
 
     <div class="media-body">
       <h5 class="mt-0"><a href="{{ member.url }}">{{ member.title }}</a></h5>
-      <p> {{member.role}} </p>
+      <p>{{member.role}}</p>
+      {%- include team_member_social.html -%}
     </div>
 </li>
