--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -20,36 +20,8 @@ layout: default
     <h3>{{ page.role }}</h3>
 
     <!-- Social -->
-    <ul class="list-inline list-unstyled">
-        <!-- Twitter -->
-        {% if page.social.twitter %}
-        <li class="list-inline-item"><a target="blank" href="{{page.social.twitter}}"><i class="fab fa-twitter"></i></a></li>
-        {% endif %}
-        <!-- Linkedin -->
-        {% if page.social.linkedin %}
-        <li class="list-inline-item"><a target="blank" href="{{page.social.linkedin}}"><i class="fab fa-linkedin"></i></a></li>
-        {% endif %}
-        <!-- Github -->
-        {% if page.social.github %}
-        <li class="list-inline-item"><a target="blank" href="{{page.social.github}}"><i class="fab fa-github"></i></a></li>
-        {% endif %}
-        <!-- Personal Website -->
-        {% if page.social.website %}
-        <li class="list-inline-item"><a target="blank" href="{{page.social.website}}"><i class="fas fa-globe"></i></a></li>
-        {% endif %}
-        <!-- Google Scholar -->
-        {% if page.social.google-scholar %}
-        <li class="list-inline-item"><a target="blank" href="{{page.social.google-scholar}}"><i class="fab fa-google"></i></a></li>
-        {% endif %}
-        <!-- Orcid -->
-        {% if page.social.orcid %}
-        <li class="list-inline-item"><a target="blank" href="{{page.social.orcid}}"><i class="fab fa-orcid"></i></a></li>
-        {% endif %}
-        <!-- Research Gate -->
-        {% if page.social.research-gate %}
-        <li class="list-inline-item"><a target="blank" href="{{page.social.research-gate}}"><i class="fab fa-researchgate"></i></a></li>
-        {% endif %}
-    </ul>
+    {% assign member = page %}
+    {%- include team_member_social.html -%}
 </div>
 
 <!-- Education -->
