fix publication page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<div id="footer" class="site-footer panel mt-5">
-	<div class="panel-footer mt-3">
-		<div class="row">
+<div id="footer" class="site-footer mt-5">
+	<div class="mt-3">
+		<div class="row d-flex">
 			<div class="col-sm-6">
 				<p class="font-weight-bold">{{ site.title }}</p>
 				<img class="img-fluid" src="/assets/images/curie.png" style="max-height: 70px;">
