--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,10 @@
 				<li>
 					<a class="nav-link" href="{{ site.url }}{{ site.baseurl }}/team">Team</a>
 				</li>
+
+				<li>
+					<a class="nav-link" href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a>
+				</li>
 			</ul>
 		</div>
 
