--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
       </div>
 
       <div class="mt-3">
-        <h1>{{ page.title }}</h1>
+        <h1 class="mb-5">{{ page.title }}</h1>
 
         {{ content }}
       </div>
