new page layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,9 @@
 		<div class="row d-flex">
 			<div class="col-sm-6">
 				<p class="font-weight-bold">{{ site.title }}</p>
-				<img class="img-fluid" src="/assets/images/curie.png" style="max-height: 70px;">
-				<img class="img-fluid" src="/assets/images/universite-paris.png" style="max-height: 70px;">
+				<img class="img-fluid" src="/assets/images/curie.png" style="max-height: 60px;">
+				<img class="img-fluid" src="/assets/images/universite-paris.png" style="max-height: 60px;">
+				<!-- <img class="img-fluid" src="/assets/images/inserm.png" style="max-height: 60px;"> -->
 			</div>
 
 			<div class="col-sm-3">
