--- a/_sass/bootstrap.scss
+++ b/_sass/bootstrap.scss
@@ -31,3 +31,10 @@ p {
 .site-header {
   border-bottom: 2px solid $light;
 }
+
+.img-cover {
+  max-height: 250px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+}
