--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -3,5 +3,9 @@ layout: default
 ---
 
 <div>
+	<img class="img-cover mb-3" src="/assets/images/u932.jpg">
+
+	<h1 class="text-center mb-5">{{ site.title }}</h1>
+
 	{{ content }}
 </div>
