--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 	<nav class="navbar navbar-expand-sm navbar-light px-0">
 
 		<!-- Navbar brand -->
-		<a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}">{{ site.title }}</a>
+		<a class="navbar-brand" href="/">{{ site.title }}</a>
 
 		<!-- Navbar toggler button -->
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
@@ -15,11 +15,11 @@
 		<div class="collapse navbar-collapse" id="navbarToggler">
 			<ul class="navbar-nav mr-auto">
 				<li>
-					<a class="nav-link" href="{{ site.url }}{{ site.baseurl }}/team">Team</a>
+					<a class="nav-link" href="/team">Team</a>
 				</li>
 
 				<li>
-					<a class="nav-link" href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a>
+					<a class="nav-link" href="/publications">Publications</a>
 				</li>
 			</ul>
 		</div>
