fix publications code

--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -14,7 +14,7 @@
             <!-- journal -->
             <span class="font-italic">{{ publi['Publication Title'] }}</span>,
 
-            {% if publi.Volume > 0  and publi.Issue > 0 and publi.Pages != "" %}
+            {% if publi.Volume != "" and publi.Issue != "" and publi.Pages != "" %}
                 vol. {{ publi.Volume | to_integer }},
                 no. {{ publi.Issue | to_integer }},
                 pp. {{ publi.Pages }}
