--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,36 @@
 <div id="footer" class="site-footer mt-5">
 	<div class="mt-3">
 		<div class="row d-flex">
+
 			<div class="col-sm-6">
 				<p class="font-weight-bold">{{ site.title }}</p>
-				<img class="img-fluid" src="/assets/images/curie.png" style="max-height: 60px;">
-				<img class="img-fluid" src="/assets/images/universite-paris.png" style="max-height: 60px;">
-				<!-- <img class="img-fluid" src="/assets/images/inserm.png" style="max-height: 60px;"> -->
+
+				<ul class="list-unstyled list-inline">
+					<li class="list-inline-item">
+						<a href="https://institut-curie.org/">
+							<img class="img-fluid" src="/assets/images/curie.png" style="max-height: 40px;">
+						</a>
+					</li>
+
+					<li class="list-inline-item">
+						<a href="https://u-paris.fr/en/498-2/">
+							<img class="img-fluid" src="/assets/images/universite-paris.png" style="max-height: 40px;">
+						</a>
+					</li>
+
+					<li class="list-inline-item">
+						<a href="https://www.inserm.fr/">
+							<img class="img-fluid" src="/assets/images/inserm.png" style="max-height: 30px;">
+						</a>
+					</li>
+				</ul>
+
 			</div>
 
 			<div class="col-sm-3">
 				<p class="font-weight-bold">Links</p>
 				<ul class="list-unstyled">
-					<li><a href="https://institut-curie.org/">Institut Curie</a></li>
 					<li><a href="https://github.com/rt2lab">Github</a></li>
-					<li><a href="">Twitter</a></li>
 				</ul>
 			</div>
 
