--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,11 +6,11 @@
 				<p class="font-weight-bold">{{ site.title }}</p>
 
 				<ul class="list-unstyled list-inline">
-					<li class="list-inline-item">
+					<!-- <li class="list-inline-item">
 						<a href="https://institut-curie.org/">
 							<img class="img-fluid" src="/assets/images/curie.png" style="max-height: 40px;">
 						</a>
-					</li>
+					</li> -->
 
 					<li class="list-inline-item">
 						<a href="https://u-paris.fr/en/498-2/">
